--- a/main.html
+++ b/main.html
@@ -4,10 +4,33 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Basic HTML Tables</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border = "1">
+		<thead>
+			<tr>
+				<th>Roll Number</th>
+				<th>Name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Priyanshu</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Nitya</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Raj</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
